--- a/setup.cfg
+++ b/setup.cfg
@@ -21,7 +21,9 @@ classifiers =
 package_dir =
     = src
 packages = find:
-python_requires = >=3.7
+python_requires = >=3.6
+install_requires =
+    requests
 
 [options.packages.find]
 where = src
