Set beta version.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = ubidots
-version = 0.0.1
+version = 0.0.1-beta
 author = Ubidots Team
 author_email = info@ubidots.com
 description = Ubidots API Client
