Add Ubidots faker provider.

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ isolated_build = True
 [testenv]
 deps =
 	faker
+	faker-ubidots @ git+ssh://git@github.com/ubidots/faker-ubidots.git
 	pytest
 	responses
 commands =
